Bug 979626 - Crash in Telephony while running stability scripts. r=vicamo